# kerndb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/kerndb/: main.py
src/kerndb/cli/: commands.py  formatters.py
src/kerndb/config/: settings.py
src/kerndb/connectors/: base.py  postgres.py
src/kerndb/tui/: app.py
src/kerndb/tui/screens/: connection.py  home.py  password.py  picker.py
src/kerndb/tui/styles/: app.tcss
src/kerndb/tui/widgets/: query_editor.py  results_table.py  sidebar.py  status_bar.py
tests/: test_cli_commands.py  test_config.py  test_postgres_connector.py
