[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kerndb"
version = "0.1.0"
description = "A beautiful, UI-first terminal database client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.50.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
kerndb = "kerndb.main:app"