[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kerndb"
version = "0.1.1"
description = "A minimal, UI-first terminal database client"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["database", "terminal", "postgresql", "tui", "cli"]
authors = [
    { name = "Sayantan Ghosh", email = "sayantan.ghosh03@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.50.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://sayantanghosh.in/projects/kerndb"
Repository = "https://github.com/sayantanghosh-in/kerndb"
"Bug Tracker" = "https://github.com/sayantanghosh-in/kerndb/issues"

[project.scripts]
kerndb = "kerndb.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kerndb"]
```

The only changes are removing `website` from the authors entry and bumping version to `0.1.1`.

---

## 3. Author showing as None on PyPI stats

Two reasons this happens:

**Reason 1** — The `website` key in your authors entry is invalid. PyPI's spec only accepts `name` and `email`. Having an unknown key causes the entire authors field to be silently dropped. The fix above removes it.

**Reason 2** — pypistats.org reads the metadata from your uploaded wheel. Since `0.1.0` was already published with the broken authors field, it will show `None` for that version permanently. Once you publish `0.1.1` with the fixed `pyproject.toml`, pypistats will show `Sayantan Ghosh` correctly for the new version.

---

## 4. Where to put the screenshot

Create a `docs/` folder in your project root:
```
kerndb/
├── docs/
│   └── screenshot.png     ← put it here
├── src/
├── README.md
├── pyproject.toml
└── ...